# StereoCameraComponent

StereoComponent/: CMakeLists.txt  README.txt
StereoComponent/cmake/Modules/: CMakeLists.txt
StereoComponent/exampleHowtoUse/: CMakeLists.txt  Left_Setup_c270.xml
StereoComponent/exampleHowtoUse/Modules/: CMakeLists.txt  Find3Dpointer.cmake
StereoComponent/exampleHowtoUse/src/: CMakeLists.txt  Right_Setup_c270.xml  testStereoCameraComponent.cpp
StereoComponent/src/: CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  Doxyfile  InterfaceStereoCamera.hpp  Left_Setup_c270.xml  Results.cpp  Results.h  Right_Setup_c270.xml  Settings.cpp  Settings.h  StereoCamera.cpp  StereoCamera.h  StereoCameraAccess.cpp  StereoCameraAccess.h  TrackerPoint.cpp  TrackerPoint.h  commonStereoComponent.h
